--- a/config/grayscale.css
+++ b/config/grayscale.css
@@ -20,6 +20,17 @@ body:not(.pt) :lang(pt) {
   color: #ff000099;
 }
 
+.author-photo {
+    margin-bottom: 28px;
+    text-align: center;
+}
+.author-photo img {
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    border: 5px solid #4481ca55;
+}
+
 .project-img {
   transition: .5s ease;
   backface-visibility: hidden;
