--- a/config/list.css
+++ b/config/list.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 body {
@@ -13,6 +14,9 @@ a {
     text-decoration: none;
 }
 
+h2, h3 {
+    font-family: 'Comfortaa', 'Noto Sans', serif;
+}
 
 .author-photo {
     margin-bottom: 28px;
@@ -76,7 +80,7 @@ ul {
     position: relative;
 
     text-align: left;
-    font: normal 14px sans-serif;
+    font-size: 14px;
 
     background: linear-gradient(to right, #6144ca, #256b6b);
     /* border: 1px solid #bbbbbb; */
@@ -90,6 +94,8 @@ ul {
 .i-s .logo {
     float: left;
     padding: 15px 15px;
+    min-width: 33px;
+    text-align: center;
 }
 
 .i-s .logo img {
@@ -109,8 +115,8 @@ ul {
 
 .i-s .title span {
     display: block;
-    font-size: 11px;
-    color: #bbbbbb;
+    font-size: 12px;
+    /* color: #dddddd; */
     padding-top: 5px;
 
     white-space: nowrap;
@@ -135,13 +141,21 @@ ul {
     border-radius: 10px;
     overflow: hidden;
 
-    font: normal 13px sans-serif;
+    font-size: 13px;
 
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+    margin-top: 20px;
     max-width: 575px;
+
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Article photo */
+
+.rightfloat {
+    float: right !important;
+}
 
 .i-b span {
     float: left;
@@ -177,10 +191,10 @@ ul {
 
 .i-b div p {
     line-height: 18px;
-    color: #bbbbbb;
+    color: #dddddd;
 
     overflow: hidden;
-    max-height: 60px;
+    /* max-height: 60px; */
 
     margin: 10px 0 0 0;
 }
@@ -201,4 +215,43 @@ ul {
         padding: 10px;
     }
 
+}
+
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #2b2b30;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 10px;
+  border: 1px solid #888;
+  width: 100%; /* Could be more or less, depending on screen size */
+  max-width: 250px;
+}
+
+/* The Close Button */
+.close {
+  color: #555555;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
 }
