--- a/config/list.css
+++ b/config/list.css
@@ -18,6 +18,23 @@ h2, h3 {
     font-family: 'Comfortaa', 'Noto Sans', serif;
 }
 
+
+.obliqueline {
+  position: relative;
+}
+.obliqueline:before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 40%;
+  right: 0;
+  border-top: 4px solid;
+  border-color: inherit;
+  transform: rotate(-10deg);
+  color: #ff000099;
+}
+
+
 .author-photo {
     margin-bottom: 28px;
     text-align: center;
@@ -132,6 +149,19 @@ ul {
 
 .i-b {
     display: block;
+    max-width: 575px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.i-v {
+    margin-left: 15px;
+    margin-right: 15px;
+    display: inline-block;
+    max-width: 250px;
+}
+
+.i-b, .i-v {
     box-sizing: border-box;
     border-radius: 3px;
     text-align: left;
@@ -145,10 +175,6 @@ ul {
 
     margin-bottom: 20px;
     margin-top: 20px;
-    max-width: 575px;
-
-    margin-left: auto;
-    margin-right: auto;
 }
 
 /* Article photo */
@@ -157,7 +183,7 @@ ul {
     float: right !important;
 }
 
-.i-b span {
+.i-b span, .i-v span {
     float: left;
     width: 200px;
     height: 200px;
@@ -167,16 +193,22 @@ ul {
 }
 
 .i-b a div {
+    max-width: 350px;
+}
+
+.i-v a div {
+    width: 250px;
+}
+
+.i-b a div, .i-v a div {
     float: left;
     box-sizing: border-box;
-
-    max-width: 350px;
     padding: 20px;
 }
 
 /* Article title */
 
-.i-b div h2 {
+.i-b div h2, .i-v div h2 {
     color: #ffffff
     font-size: 16px;
     overflow: hidden;
@@ -189,7 +221,7 @@ ul {
 
 /* Article excerpt */
 
-.i-b div p {
+.i-b div p, .i-v div p {
     line-height: 18px;
     color: #dddddd;
 
@@ -215,6 +247,22 @@ ul {
         padding: 10px;
     }
 
+}
+
+
+.i-v ul {
+    max-width: 150px;
+}
+
+.i-v span {
+    float: none;
+    width: 100%;
+    max-height: 200px;
+}
+
+.i-v a div {
+    padding: 10px;
+    height: 100px;
 }
 
 
