--- a/config/grayscale.css
+++ b/config/grayscale.css
@@ -292,12 +292,12 @@ h5 {
 }
 
 .projects-section .featured-text {
-  padding: 2rem;
+  padding: 0;
 }
 
 @media (min-width: 992px) {
   .projects-section .featured-text {
-    padding: 0 0 0 2rem;
+    padding: 0 0 0 0;
     //border-left: 0.5rem solid var(--light);
   }
 }
