--- a/config/grayscale.css
+++ b/config/grayscale.css
@@ -59,8 +59,10 @@ h5 {
     text-align: center;
 }
 .author-photo img {
-    height: 200px;
-    width: 200px;
+    max-height: 200px;
+    max-width: 200px;
+    height: 100%;
+    width: 100%;
     border-radius: 50%;
     border: 5px solid #4481ca55;
 }
