--- a/config/list.css
+++ b/config/list.css
@@ -95,6 +95,8 @@ ul {
     background: #00000000 !important;
     /* border: solid 1px white; */
     width: 100% !important;
+    max-width: 575px;
+    margin: 0px !important;
     padding-left: 20px;
     padding-right: 20px;
     text-align: justify !important;
