--- a/config/grayscale.css
+++ b/config/grayscale.css
@@ -336,13 +336,28 @@ h5 {
   border: 0;
 }
 
+.contact-bg {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.2) 50%, rgba(0, 0, 0, 0.9) 100%), url("../img/bg-signup.jpg");
+}
+
+.buy-bg {
+    background: linear-gradient(to bottom, rgba(8, 8, 8, 1) 0%, rgba(0, 0, 0, 0.2) 50%, rgba(0, 0, 0, 0.9) 100%), url("../img/bg-buy3.jpg");
+}
+
 .contact-section {
   padding: 10rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.2) 50%, rgba(0, 0, 0, 0.9) 100%), url("../img/bg-signup.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
+}
+
+.buy-bg .card {
+  border-bottom: 0.25rem solid rgb(194, 110, 1) !important;
+}
+
+.buy-bg a {
+    color: #ca8d09;
 }
 
 .contact-section .card {
@@ -352,7 +367,7 @@ h5 {
 }
 
 .contact-section .card:hover {
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.7);
 }
 
 .contact-section .card h4 {
